// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TABLE[Label]: should create label to db 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 1,
    "text": "Inbox",
    "type": "custom",
    "visible": 0,
  },
]
`;

exports[`TABLE[Label]: should update label: color 1`] = `
Array [
  Object {
    "color": "#111111",
    "id": 3,
    "text": "Spam",
    "type": "custom",
    "visible": 0,
  },
]
`;

exports[`TABLE[Label]: should update label: color and text 1`] = `
Array [
  Object {
    "color": "#000000",
    "id": 2,
    "text": "labelmodified",
    "type": "custom",
    "visible": 0,
  },
]
`;

exports[`TABLE[Label]: should update label: text 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 4,
    "text": "labelmodified2",
    "type": "custom",
    "visible": 0,
  },
]
`;

exports[`TABLE[Label]: should update label: visible 1`] = `
Array [
  Object {
    "color": "#ffffff",
    "id": 5,
    "text": "Important",
    "type": "custom",
    "visible": 1,
  },
]
`;
